# ClemBot

./: .gitignore  BotSecrets.json.template  BotSecrets.temp.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ClemBot.sqlite  Dockerfile  LICENSE  README.md  bash.exe.stackdump  docker-compose.yml  main.py  requirements.txt  setup.sh
.github/: FUNDING.yml
.github/workflows/: ClemBot-Deployment.yml  ClemBot.Api-Deployment.yml  ClemBot.Api-Integration.yml  ClemBot.Bot-Deployment copy 2.yml  ClemBot.Bot-Deployment.yml  ClemBot.Bot-Integration.yml  ClemBot.Site-Deployment copy.yml  ClemBot.Site-Deployment.yml  ClemBot.Site-Integration.yml.yml  ClemBot.yml  Deployment.yml  Integration.yml  Pull-Request-Comment.yaml  codeql-analysis.yml
.run/: ClemBot.run.xml
Bot/: BotSecrets.py  ClemBot.py  bot_secrets.py  clem_bot.py  logger.py  main.py
Bot/Cogs/: manageClasses.py  manage_classes.py
Bot/Data/: Database.py  data_context.py
ClemBot.Api/: .editorconfig  ClemBot.Api.sln  Dockerfile
ClemBot.Api/.config/: dotnet-tools.json
ClemBot.Api/ClemBot.Api.Common/: Claims.cs  ClemBot.Api.Common.csproj  ConfigurationKeys.cs  IResponseModel.cs  SeqConstants.cs
ClemBot.Api/ClemBot.Api.Core/: ClemBot.Api.Core.csproj  GlobalUsings.cs  Program.cs  Startup.cs  appsettings.json  nuget.config
ClemBot.Api/ClemBot.Api.Data/: ClemBot.Api.Data.csproj
ClemBot.Api/ClemBot.Api.Services/: ClemBot.Api.Services.csproj
ClemBot.Bot/: .dockerignore  BotSecrets.json.example  BotSecrets.json.template  Dockerfile  pyproject.toml  requirements.txt
ClemBot.Bot/bot/: __init__.py  __main__.py  bot_secrets.py  clem_bot.py  consts.py  custom_prefix.py  custom_tag_prefix.py  errors.py  extensions.py  language_consts.py  models.py
ClemBot.Bot/bot/api/: __init__.py  api_client.py  base_route.py  channel_route.py  claim_route.py  commands_route.py  custom_prefix_route.py  custom_tag_prefix_route.py  designated_channel_route.py  emote_board_route.py  guild_route.py  health_check_route.py  message_route.py  moderation_route.py  reminder_route.py  role_route.py  slots_score_route.py  tag_route.py  thread_route.py  user_route.py  welcome_message_route.py
ClemBot.Bot/bot/cogs/: assignable_roles_cog.py  bot_info_cog.py  calculator_cog.py  chain_cog.py  choose_cog.py  claims_authorization_cog.py  command_cog.py  custom_prefix_cog.py  custom_tag_prefix_cog.py  define_cog.py  designated_channels_cog.py  emote_board_cog.py  emote_cog.py  eval_cog.py  example_cog.py  gif_me_cog.py  guild_info_cog.py  help_cog.py  image_dots_cog.py  info_cog.py  lmgtfy_cog.py  manage_classes_cog.py  owner_cog.py  owo_cog.py  ping_pong_cog.py  remind_cog.py  rock_paper_scissors_cog.py  search_cog.py  source_code_cog.py  tags_cog.py  translate_cog.py  trivia_cog.py  weather_cog.py  welcome_message_cog.py
ClemBot.Bot/bot/cogs/base_converter/: base_converter_cog.py
ClemBot.Bot/bot/cogs/grades_cog/: grades_cog.py
ClemBot.Bot/bot/cogs/grades_cog/assets/: 2014_Fall.csv  2014_Spring.csv  2015_Fall.csv  2015_Spring.csv  2016_Fall.csv  2016_Spring.csv  2017_Fall.csv  2017_Spring.csv  2018_Fall.csv  2018_Spring.csv  2019_Fall.csv  2019_Spring.csv  2020_Fall.csv  2021_Fall.csv  2021_Spring.csv  2022_Spring.csv
ClemBot.Bot/bot/cogs/latex_cog/: latex_cog.py
ClemBot.Bot/bot/cogs/memes_cog/: memes_cog.py
ClemBot.Bot/bot/cogs/moderation_cog/: ban_cog.py  infractions_cog.py  mute_cog.py  purge_cog.py  warn_cog.py
ClemBot.Bot/bot/cogs/random_cog/: og_slots_cog.py  random_cog.py  slots_cog.py
ClemBot.Bot/bot/cogs/random_cog/assets/: phrases.txt
ClemBot.Bot/bot/messaging/: events.py  messenger.py
ClemBot.Bot/bot/models/: channel_models.py  clem_bot_model.py  command_models.py  emote_board_models.py  guild_models.py  message_models.py  moderation_models.py  reminder_models.py  role_models.py  tag_models.py  thread_models.py  user_models.py
ClemBot.Bot/bot/services/: assignable_roles_service.py  base_service.py  bot_ping_help_service.py  channel_handling_service.py  claims_service.py  command_metrics_service.py  command_service.py  delete_message_service.py  designated_channel_service.py  emote_board_service.py  example_service.py  fuzzy_matching_service.py  guild_handling_service.py  message_handling_service.py  moderation_service.py  paginate_service.py  remind_service.py  reminder_service.py  role_handling_service.py  starboard_service.py  startup_service.py  tag_service.py  thread_handling_service.py  translate_cog.py  user_handling_service.py  welcome_message_service.py
ClemBot.Bot/bot/utils/: clem_bot_model.py  converters.py  displayable_path.py  helpers.py  log_serializers.py  logging_utils.py  scheduler.py  trigrams.py  user_choice.py
ClemBot.Bot/scripts/: normalize_grade_data.py
ClemBot.Bot/stubs/: seqlog.pyi
ClemBot.Bot/stubs/humps/camel/: __init__.pyi
ClemBot.Bot/stubs/logging/: __init__.pyi  config.pyi  handlers.pyi
ClemBot.Bot/stubs/markdownify/: __init__.pyi
ClemBot.Bot/stubs/nltk/: __init__.pyi
ClemBot.Bot/stubs/seqlog/: __init__.pyi  consumer.pyi  structured_logging.pyi
ClemBot.Bot/tests/bot/messaging/: messenger_test.py
ClemBot.Bot/tests/bot/utils/: scheduler_test.py
ClemBot.Docs/: docusaurus.config.js  package-lock.json  package.json
ClemBot.Docs/docs/: AssignableRoles.md  Claims.md  CommandRestrictions.md  CustomPrefix.md  DesignatedChannels.md  EmoteBoards.md  Intro.md  Tags.md  WelcomeMessage.md  intro.md
ClemBot.Site/: .dockerignore  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  Dockerfile  README.md  angular.json  astro.config.mjs  karma.conf.js  nuxt.config.js  nuxt.config.ts  package-lock.json  package.json  tsconfig.json
ClemBot.Site/components/: Contributors.vue  DiscordLogo.vue  FeatureCard.vue  Footer.vue  GuildDropdown.vue  Stargazers.vue  UserDisplay.vue
ClemBot.Site/layouts/: dashboard.vue  default.vue
bot/: __main__.py  bot_secrets.py  clem_bot.py  consts.py  custom_prefix.py  errors.py  events.py  extensions.py  main.py
k8s/: .gitignore
scripts/: normalize_grade_data.py
src/: __main__.py
(+604 files in other folders)
