[tool.poetry]
name = "clembot.bot"
version = "3.0.0"
description = "A Discord bot for server management with an emphasis on modularity and configuration. We are a community focused on learning and acceptance and anyone is welcome. If you have an idea or a feature you would like to contribute feel free to open an issue and we as a community can begin discussion."
authors = ["Jay Madden <jaymaddencox@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
"discord.py" = { git = "https://github.com/Rapptz/discord.py.git", branch = "e92a6266628d0cc99727c8eb88c2432a931138a0" }
aiohttp = "3.7.4"
aiosqlite = "0.12.0"
appdirs = "1.4.3"
arrow = "1.1.1"
asgiref = "3.4.1"
async-timeout = "3.0.1"
asynctest = "0.13.0"
atomicwrites = "1.4.1"
attrs = "21.4.0"
bandit = "1.7.4"
beautifulsoup4 = "4.9.3"
CacheControl = "0.12.11"
certifi = "2021.10.8"
chardet = "3.0.4"
charset-normalizer = "2.0.7"
click = "8.1.3"
contextlib2 = "0.6.0"
dateutils = "0.6.8"
dill = "0.3.5.1"
distlib = "0.3.1"
distro = "1.4.0"
entrypoints = "0.3"
filelock = "3.6.0"
gitdb = "4.0.4"
GitPython = "3.1.1"
html5lib = "^1.1"
idna = "2.9"
importlib-metadata = "1.7.0"
iniconfig = "1.0.1"
install = "1.3.3"
ipaddr = "2.2.0"
joblib = "1.2.0"
lazy-object-proxy = "1.4.3"
lockfile = "0.12.2"
markdownify = "0.9.0"
mccabe = "0.6.1"
mock = "4.0.2"
more-itertools = "8.4.0"
msgpack = "0.6.2"
multidict = "6.0.2"
nltk = "3.7"
numpy = "1.22.1"
ordered-set = "4.0.2"
packaging = "20.4"
pandas = "1.3.4"
pbr = "5.4.5"
pep517 = "0.8.2"
Pillow = "9.0.1"
platformdirs = "2.5.2"
pluggy = "0.13.1"
progress = "1.5"
python-dateutil = "2.8.1"
pytoml = "0.1.21"
pytz = "2022.1"
PyYAML = "5.4"
regex = "2022.6.2"
requests = "2.27.1"
retrying = "1.3.3"
rope = "1.0.0"
seqlog = "0.3.20"
six = "1.16.0"
smmap = "3.0.2"
soupsieve = "2.2.1"
sqlparse = "0.4.2"
stevedore = "3.5.0"
stringcase = "1.2.0"
toml = "0.10.2"
tomli = "2.0.1"
tqdm = "4.64.0"
typed-ast = "1.5.3"
typing-extensions = "3.10.0.0"
typing-inspect = "0.7.1"
tzdata = "2021.5"
urllib3 = "1.26.9"
virtualenv = "20.14.1"
webencodings = "0.5.1"
wrapt = "1.14.1"
yarl = "1.7.2"
zipp = "3.8.0"
pydantic = "^1.9.1"
humps = "^0.2.2"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.6.0"
mypy = "^0.971"
pytest-asyncio = "^0.19.0"
pytest = "^7.1.2"
flake8 = "^4.0.1"
pyspellchecker = "^0.6.3"
pycodestyle = "^2.8.0"
pyflakes = "^2.4.0"
types-requests = "^2.28.3"
types-python-dateutil = "^2.8.19"
pandas-stubs = "^1.4.3"
types-Pillow = "^9.2.0"
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
plugins = ["pydantic.mypy"]
mypy_path = "stubs"
files = ["bot/**/*.py"]
python_version = "3.10"
strict = true
warn_unused_configs = true
namespace_packages = true
