[tool.poetry]
name = "clembot.bot"
version = "3.0.0"
description = "A Discord bot for server management with an emphasis on modularity and configuration. We are a community focused on learning and acceptance and anyone is welcome. If you have an idea or a feature you would like to contribute feel free to open an issue and we as a community can begin discussion."
authors = ["Jay Madden <jaymaddencox@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
discord.py" = { git = "https://github.com/Rapptz/discord.py.git", branch = "5527de688afe789266d4c2b1f6c5373985232dff" }
aiohttp = "^3.8.3"
arrow = "^1.2.3"
seqlog = "^0.3.20"
pandas = "^1.5.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.6.0"
mypy = "^0.971"
pytest-asyncio = "^0.19.0"
pytest = "^7.1.2"
flake8 = "^4.0.1"
pyspellchecker = "^0.6.3"
pycodestyle = "^2.8.0"
pyflakes = "^2.4.0"
types-requests = "^2.28.3"
types-python-dateutil = "^2.8.19"
pandas-stubs = "^1.4.3"
types-Pillow = "^9.2.0"
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
plugins = ["pydantic.mypy"]
mypy_path = "stubs"
files = ["bot/**/*.py"]
python_version = "3.10"
strict = true
warn_unused_configs = true
namespace_packages = true
